Portfolio Update September 2021

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #A56021;
+$secondary-color: #C9E265;
 
 $white-color: #fff;
 
